# mg

./: Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.in  stemmerinterface.c  sysfuncs.h  win32.mak  win32cfg.h  winMake.bat
SampleData/: index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D
docs/: index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D  mg.1  mgintro++.1  mgintro.1
java/: index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=S;O=A  index.html?C=S;O=D
java/org/: index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A
java/org/greenstone/: index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A
java/org/greenstone/mg/: MGDocInfo.java  MGEquivTermInfo.java  MGPassesWrapper.java  MGQueryResult.java  MGRetrieveWrapper.java  MGSearchWrapper.java  MGTermInfo.java  MGWrapper.java  Makefile.in  Queryer.java  index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=N;O=D  index.html?C=S;O=A  winMake.bat
jni/: MGPassesWrapperImpl.c  MGRetrieveWrapperImpl.c  MGSearchWrapperImpl.c  MGWrapperImpl.c  MGWrapperImpl.h  Makefile.in  index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D  org_greenstone_mg_MGPassesWrapper.h  org_greenstone_mg_MGRetrieveWrapper.h  org_greenstone_mg_MGSearchWrapper.h  org_greenstone_mg_MGWrapper.h  win32.mak
lib/: Makefile.in  alloca.c  bitio_gen.c  bitio_gen.h  bitio_m.h  bitio_m_mem.h  bitio_m_mems.h  bitio_m_random.h  bitio_m_stdio.h  bitio_mem.c  bitio_mem.h  bitio_mems.c  bitio_mems.h  bitio_random.c  bitio_random.h  bitio_stdio.c  bitio_stdio.h  error.c  filestats.c  filestats.h  ftruncate.c  getopt.c  getopt1.c  gmalloc.c  huffman.c  huffman.h  huffman_mem.c  huffman_mem.h  huffman_stdio.c  huffman_stdio.h  index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D  local_strings.c  local_strings.h  longlong.h  (+28 more)
man/: index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D
man/man1/: index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D  mg_fast_comp_dict.1  mg_get_merge.1  mg_invf_dict.1  mg_invf_dump.1  mg_invf_merge.1  mgbuild.1  mgbuild_4.1  mgdictlist.1  mgfelics.1  mgmerge.1  mgticbuild.1  mgticprune.1  mgticstat.1
src/: index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=S;O=A
src/images/: Makefile.in  arithcode.c  arithcode.h  basictypes.h  bilevel.c  bilevel.h  codeoffsets.c  codeoffsets.h  codesyms.c  codesyms.h  extractor.c  extractor.h  felics.c  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=N;O=A  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D  lstevent.c  marklist.c  marklist.h  match.c  match.h  mgbilevel.1  mgbilevel.c  mgfelics.c  mgtic.1  mgtic.c  mgticbuild.c  mgticdump.1  mgticdump.c  mgticprune.c  mgticstat.c  model.h  pbmtools.c  pbmtools.h  ppm.c  sortmarks.c  sortmarks.h  (+3 more)
src/scripts/: Makefile.in  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D  xmg.1
src/text/: Makefile.in  backend.c  backend.h  bool_optimiser.c  bool_optimiser.h  bool_parser.c  bool_parser.h  bool_parser.y  bool_query.c  bool_query.h  bool_tester.c  bool_tree.c  bool_tree.h  build.h  commands.c  commands.h  comp_dict.c  comp_dict.h  environment.c  environment.h  globals.h  hash.h  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=A  index.html?C=S;O=A  index.html?C=S;O=D  invf.h  invf_get.c  invf_get.h  ivf.pass1.c  ivf.pass2.c  lists.c  lists.h  locallib.c  locallib.h  mg.h  mg.special.c  (+61 more)
test/: alice.len  alice.sum  index.html  index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D  r2  r3  simple_sum.c
